# enlarge

./: .gitignore  .gitmodules  CMakeLists.gtest.local.txt  CMakeLists.txt  Dockerfile  MVC.sh  README.md  break.gdb  build.sh  build_run_multi_area_model.sh  clean.sh  docker-compose.yml  enlarge.md  gmon.out  graphSpilt.sh  mpitmux  multi_area_0_01.sh  multi_area_model.sh  network_partition.sh  openmpi.config  openmpi1.config  pattern_1_node.sh  pattern_circle.sh  pattern_circle_acc.sh  pattern_circle_acc_single.sh  pattern_circle_delay.sh  pattern_circle_delay_aware.sh  pattern_circle_test2.sh  pattern_fc.sh  pattern_fc_acc.sh  pattern_fc_acc_single.sh  pattern_fc_delay.sh  pattern_fc_delay_aware.sh  pattern_fc_large_acc.sh  pattern_forward.sh  pattern_forward_acc.sh  pattern_forward_acc_delay_weight.sh  pattern_forward_acc_single.sh  pattern_forward_delay.sh  pattern_forward_delay_aware.sh  (+32 more)
backup/: BuildNetworks2.cpp  FileOp.h  GBuffers.cu  ID.cpp  ModelArray.h  MultiGPUSimulator.single.cu  ProcBuf.cpp  ProcBuf.cu  ProcBuf.h  TypeFunc.cpp  TypeFunc.cu
backup/izhikevich/: IzhikevichData.compute.cpp  IzhikevichData.mpi.cpp
backup/lif/: LIFData.kernel.cu  LIFData.mpi.cpp
backup/lif_std/: LIFData.compute.cpp  LIFData.cu  LIFData.h  LIFNeuron.cpp  LIFNeuron.h
backup/static_std/: StaticData.cpp  StaticData.cu  StaticData.h  StaticData.kernel.cu  StaticData.mpi.cpp  StaticSynapse.cpp  StaticSynapse.h
backup/stdp/: STDPData.compute.cpp  STDPData.mpi.cpp
backup/traubmiles/: TraubMilesData.h  TraubMilesData.kernel.cu  TraubMilesData.mpi.cpp
include/: BSim.h  Neurons.h  Simulators.h  Synapses.h
metis/: build.sh  eval_res  forward.graph  grp_metis.sh  makefile  part  part.cpp  part_metis.sh  repart  repart.cpp  run.sh  show_res  show_res.cpp  to_metis  to_metis.sh  to_metis_2  to_metis_3  to_metis_3.cpp  to_metis_all  to_metis_all.cpp  to_metis_grp  to_metis_grp.cpp  to_metis_grp4  to_metis_nodelay  to_metis_s1  to_metis_s1.cpp  to_metis_s2  to_metis_s2.cpp  to_metis_s3  to_metis_s3.cpp  wgt_metis.sh
metis/backup/: eval_res.cpp  part.cpp  to_metis.cpp  to_metis_2.cpp  to_metis_3.cpp  to_metis_grp.cpp  to_metis_grp4.cpp  to_metis_nodelay.cpp  to_metis_s1.cpp  to_metis_s2.cpp  to_metis_s3.cpp  to_metis_s3_alpha.cpp
multi-area-model/: check_delay.cpp  construct_network.cpp  merge_weight.cpp  network_info.cpp  run_network.cpp  run_network_multi_level.cpp
pattern_network/: clean.sh  compute_spikes.py  pattern_circle.py  pattern_circle_3_2.py  pattern_fc.py  pattern_fc_3_2.py  pattern_forward.py  pattern_forward_3_2.py  pattern_multi_delay.py  run_circle.sh  run_fc.sh  run_forward.sh  run_multi_delay.sh  run_single_node_all.sh  spack_circle_run.sh  spack_fc_run.sh  spack_forward_run.sh  spack_multi_delay_run.sh  sum.py
script/: average.py  backup_data.py  bsim_analysis.py  column_merge.py  convert_fire_time.py  data_compare.py  data_diff.py  data_gen.py  gain_circle_neuron_num.py  gain_multi_area_network.py  gain_pattern_table.py  gain_pattern_table2.py  generate_model_gpu.py  generate_type_functions.py  lif_mpi_gpu_test.sh  lif_mpi_test.sh  lif_test.sh  line_sub.py  line_sum.py  mvc_delay_check.py  to_metis.cpp
script/test/: CrossMap.cpp  CrossMap.cu  CrossMap.h
src/base/: ID.h  TypeFunc.cpp  TypeFunc.cu  TypeFunc.h  constant.h  type.h
src/gpu_utils/: GBuffers.cu  GBuffers.h  gpu_utils.cu  gpu_utils.h  helper_gpu.h  runtime.cu  runtime.h
src/interface/: Data.cpp  Data.cu  Data.h  Model.h  ModelView.h  Neuron.cpp  Neuron.h  Simulator.cpp  Simulator.h  Synapse.cpp  Synapse.h
src/msg_utils/: CrossNodeData.cpp  CrossNodeData.cpp.cu  CrossNodeData.cu  CrossNodeData.h  CrossNodeMap.cpp  CrossNodeMap.cu  CrossNodeMap.h  CrossThreadData.h  convert.cpp  convert.h  msg_utils.cpp  msg_utils.h
src/net/: BuildNetwork.cpp  BuildNetworks.cpp  Connection.cpp  Connection.cu  Connection.h  CrossNodeData.cpp  CrossNodeData.cu  CrossNodeData.h  CrossNodeMap.cpp  CrossNodeMap.h  CrossThreadData.h  DistriNetwork.cpp  DistriNetwork.h  GNetwork.cpp  GNetwork.cu  GNetwork.h  Network.cpp  Network.cu  Network.h  SplitNetworks.cpp
src/sim/: HybridSimulator.cpp  HybridSimulator.cu  HybridSimulator.h  MultiGPUSimulator.cu  MultiGPUSimulator.h  MultiGPUSimulator.single.cu  MultiLevelSimulator.cpp  MultiLevelSimulator.cu  MultiLevelSimulator.h  MultiNCCLSimulator.cpp  MultiNCCLSimulator.cu  MultiNCCLSimulator.h  MultiNodeSimulator.cpp  MultiNodeSimulator.cu  MultiNodeSimulator.h  MultiThreadSimulator.cpp  MultiThreadSimulator.h  SingleGPUSimulator.cu  SingleThreadSimulator.cpp
src/utils/: Buffer.cpp  Buffer.cu  Buffer.h  ID.h  ModelArray.h  Para.h  SimInfo.h  TypeFunc.h  constant.h  helper_c.h  macros.h  proc_info.cpp  proc_info.h  procinfo.h  python.cpp  python.h  runtime.h  sysinfo.h  type.h  utils.cpp  utils.h  vision.cpp
test/catch2/: catch.h
test/cpu/: iaf_cpu.cpp  iaf_forward_pthread.cpp  iaf_one_neuron.cpp  iaf_poisson.cpp  lif_brian_test.cpp  lif_cpu.cpp  lif_cpu_diff_delay.cpp  pattern_forward_pthread.cpp  poisson_cpu.cpp  synapse_test.cpp  test_nest.cpp
test/gpu/: brian_unit_test.cpp  fx_test.cpp  gpusim_test.cpp  iaf_gpu.cpp  iaf_one_neuron_gpu.cpp  lif_gpu.cpp  lif_gpu_diff_delay.cpp  lif_gpu_prof.cpp  lif_unit1_test.cpp  lif_unit2_test.cpp  lif_unit3_test.cpp  lif_unit4_test.cpp  lif_unit_test.cpp  multi_test.cpp  pattern_circle.cpp  pattern_circle_gpu.cpp  pattern_circle_iaf_gpu.cpp  pattern_fc_gpu.cpp  pattern_fc_iaf_gpu.cpp  pattern_forward.cpp  pattern_forward_gpu.cpp  pattern_forward_iaf.cpp  pattern_forward_iaf_gpu.cpp  poisson_gpu.cpp  poisson_test.cpp  round_test.cpp  standard_test.cpp  tree_test.cpp
test/mpi/: data_gen.cpp  delay_mpi_test.cpp  delay_test.cpp  forward_mpi_gen.cpp  forward_mpi_gpu.cpp  forward_mpi_gpu2.cpp  forward_mpi_ml.cpp  forward_mpi_ml2.cpp  forward_mpi_ml_test.cpp  forward_mpi_test.cpp  iaf_mpi.cpp  iaf_mpi_hybrid_simulator.cpp  iaf_one_neuron_mpi.cpp  info.h  lif_gpu_level.cu  lif_mpi.cpp  lif_mpi_diff_delay.cpp  lif_mpi_gpu.cpp  lif_mpi_level.cpp  lif_mpi_level2.cpp  mpi_gpu_test.cpp  (+31 more)
time_test/: run_multi_area_model_multi_level.sh
(+54 files in other folders)
